# j1

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: tests.yml
cmake/: googletest-download.cmake  googletest.cmake
examples/: add.ft
src/: IOConsole.cpp  IOConsole.hpp  Logger.hpp  Term.hpp  VM.cpp  main.cpp
src/compiler/: main.cpp
src/lib/: Config.hpp.in
src/vm/: J1.cpp  J1.hpp  Stack.cpp  Stack.hpp  VM.cpp  VM.hpp
tests/: CMakeLists.txt  TestStack.cpp  TestVM.cpp
